fix spacing around code block with no tabs and increase space above each new number/bullet

--- a/themes/doks/assets/scss/common/_global.scss
+++ b/themes/doks/assets/scss/common/_global.scss
@@ -464,7 +464,10 @@ details[open] summary:after {
   content: url("/icons/icon-arrow-up.svg");
 }
 
+
+
 li p{
+  margin-top: 0.5rem;
   margin-bottom: 0;
 }
 
@@ -473,5 +476,10 @@ li .nav-tabs{
 }
 
 li .tab-content{
+  margin-bottom: 0.5rem;
+}
+
+li pre{
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 };
